--- a/hello-spring/hello-spring/src/main/resources/static/hello-static.html
+++ b/hello-spring/hello-spring/src/main/resources/static/hello-static.html
@@ -8,4 +8,4 @@
 정적 컨텐츠 입니다.
 </body>
 </html>
-<!--https:// localhost:8080/hello-static.html 로 접속하면 보임-->
+<!--https:// localhost:8080/hello-static.html 로 접속 하면 정적 페이지가 보임-->
